# cmake-cross-test

./: .gitignore  CMakeLists.txt  CMakeSettings.json
CMakeProject1/: -CMakeLists.txt  CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  test.cpp  test.h
